refactor:change employee to backendUser,and rewrite related code